--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express-rate-limit": "^7.5.0",
     "json-server": "^1.0.0-beta.3"
   },
   "devDependencies": {
