--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "license": "ISC",
   "dependencies": {
     "express-rate-limit": "^7.5.0",
-    "json-server": "^1.0.0-beta.3"
+    "json-server": "^1.0.0-beta.3",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "cors": "^2.8.5",
