--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
   "dependencies": {
     "express-rate-limit": "^7.5.0",
     "json-server": "^1.0.0-beta.3",
-    "pg": "^8.11.3"
-  },
-  "devDependencies": {
+    "pg": "^8.11.3",
     "cors": "^2.8.5",
     "express": "^5.1.0"
-  }
+  },
+  "devDependencies": {}
 }
